--- a/src/Pages/Login/Register/Register.css
+++ b/src/Pages/Login/Register/Register.css
@@ -2,9 +2,11 @@
     margin: 0 auto;
     width: 50%;
 }
-.register-form input{
+.register-form input:not([type=checkbox]){
     width: 100%;
     height: 40px;
+    border-radius: 8px;
+    border: 1px solid lightgray;
     padding-left: 10px;
     font-size: 21px;
     margin-bottom: 15px;
